# yq-qa

./: .env.deepread.example  .env.openviking-rag.example  .env.ovbot.example  .env.yq-qa.example  .gitignore  INSTALL.md  pyproject.toml
apps/: README.md
apps/rag-deepread/: INSTALL.md  pyproject.toml
apps/rag-deepread/src/DeepRead/: .gitignore  README.md  __init__.py  deepread.py
apps/rag-deepread/src/DeepRead/agent/: __init__.py  cli.py  llm.py  logger.py  runner.py
apps/rag-deepread/src/DeepRead/index/: __init__.py  embedding.py  ingest.py  markdown_parser.py  paddleocr.sh  pdf_parser.py
apps/rag-deepread/src/DeepRead/prompt/: system.py
apps/rag-deepread/src/DeepRead/tool/: __init__.py  bm25_search.py  corpus.py  fallback.py  hybrid_search.py  read_section.py  regex_search.py  retrieval.py  schema.py  semantic_retrieval.py  utils.py  vector_search.py
apps/rag-deepread/src/yq_rag_deepread/: __main__.py  app.py  cli.py  config.py  models.py
apps/rag-manager/: INSTALL.md  pyproject.toml
apps/rag-manager-eval/: .env.example  INSTALL.md  pyproject.toml
apps/rag-manager-eval/configs/: local-financebench-openviking-bot-chat.yaml  local-financebench-openviking-bot-retrieve.yaml  local-versionrag-openviking-bot-chat.yaml  openviking-financebench.ov.conf  openviking-versionrag.ov.conf
apps/rag-manager-eval/examples/: sample_qa.jsonl
apps/rag-manager-eval/src/yq_rag_manager_eval/: __main__.py  cli.py  client.py  config.py  datasets.py  judge.py  metrics.py  models.py  runner.py
apps/rag-manager/src/yq_rag_manager/: __main__.py  app.py  cli.py  diagnostics.py  ingestion_runner.py  models.py  store.py  supervisor.py
apps/rag-openviking-bot/: INSTALL.md  ov.conf  pyproject.toml
apps/rag-openviking-bot/src/yq_rag_openviking_bot/: __main__.py  app.py  cli.py  config.py  process_cleanup.py
apps/yq-qa-web/: README.md  index.html  package-lock.json  package.json  tsconfig.node.json
apps/yq-qa-web/src/: App.tsx  api.ts  styles.css  types.ts
docs/: rag-api-contract.md  rag-manager-install.md
scripts/deploy/: README.md  start-yq-qa.sh  stop-yq-qa.sh
src/yq_qa_rag/: __init__.py  app.py  auth.py  cli.py  config.py  document_runner.py  merge.py  models.py  rag_manager_client.py  registry.py  store.py  task_runner.py
src/yq_qa_rag/adapters/: __init__.py  base.py  deepread.py  openviking_rag.py  ovbot.py
tests/: test_auth.py  test_rag_method_runtime.py
