[project]
name = "yq-qa-rag"
version = "0.1.0"
description = "Unified RAG backend API wrappers for OV-Bot and DeepRead."
readme = "INSTALL.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
openviking-rag = [
    "openviking[bot]",
]
deepread = [
    "numpy>=1.26.0",
    "requests>=2.31.0",
    "tiktoken>=0.7.0",
]

[project.scripts]
rag-server = "yq_qa_rag.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yq_qa_rag"]
