[project]
name = "yq-rag-deepread"
version = "0.1.0"
description = "YQ RAG worker wrapper for DeepRead."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "openai>=1.0.0",
    "pydantic>=2.8.0",
    "pymupdf>=1.24.0",
    "requests>=2.31.0",
    "tiktoken>=0.7.0",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
deepread-worker = "yq_rag_deepread.cli:main"
deepread = "DeepRead.deepread:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yq_rag_deepread", "src/DeepRead"]
