[project]
name = "yq-rag-manager"
version = "0.1.0"
description = "RAG method manager for YQ-QA."
readme = "INSTALL.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
rag-manager = "yq_rag_manager.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yq_rag_manager"]
