[project]
name = "yq-rag-openviking-bot"
version = "0.1.0"
description = "YQ RAG worker wrapper for OpenViking Bot."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "openviking[bot]",
    "pydantic>=2.8.0",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
openviking-bot-worker = "yq_rag_openviking_bot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yq_rag_openviking_bot"]
